Fixes overflow

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -341,6 +341,7 @@ h1, h2, h3, h4 {
   position: relative;
   width: 100%;
   height: 300px;
+  overflow: hidden;
 
   .mask {
     background: #FFF;
